[package]
name = "server"
version = "0.1.0"
authors = [
	"cledant <cledant@student.42.fr>",
	"pbondoer <pbondoer@student.42.fr>",
]
edition = "2018"

[dependencies]
gomoku_lib = { path = "./gomoku_lib" }

[[bin]]
name = "termoku"
path = "src/termoku/main.rs"

[[bin]]
name = "server_moku"
path = "src/server_moku/main.rs"

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
