[package]
name = "server_lib"
version = "0.1.0"
authors = [
	"cledant <cledant@student.42.fr>",
	"pbondoer <pbondoer@student.42.fr>",
]
edition = "2018"

[dependencies]

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false
